<resources>
    <string name="app_name">SuperLearn</string>
    <string name="theme_name">Theme name</string>
    <string name="name">Name</string>
    <string name="add_theme">Add theme</string>
    <string name="theory">Theory</string>
    <string name="test">Test</string>
    <string name="back">Back</string>
    <string name="delete_theme">Delete theme</string>
    <string name="add_photo_video">Add photo/video</string>
    <string name="add_question">Add question</string>
    <string name="question_text">Question text</string>
    <string name="answer_1">Answer 1</string>
    <string name="answer_2">Answer 2</string>
    <string name="answer_3">Answer 3</string>
    <string name="answer_4">Answer 4</string>
    <string name="save_and_add_new_question">Save and add new Question</string>
    <string name="delete_question">Delete question</string>
    <string name="retry">Retry</string>
    <string name="error">Error</string>
    <string name="do_you_want_to_delete">Do you want to delete it?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="start_test">Start test</string>
    <string name="next">Next</string>
    <string name="check">Check</string>
    <string name="new_game">New Game</string>
    <string name="stats">Game over\nCorrects: %d\nIncorrects: %d</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="service_unavailable">Service is unavailable</string>
</resources>