<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/themeContainer">

    <TextView
        android:id="@+id/fullNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/name" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_margin="8dp"
        android:hint="@string/theme_name">

        <EditText
            android:id="@+id/inputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:freezesText="true"
            android:singleLine="true"
            android:inputType="text"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/theoryButton"
             android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/theory"
            android:layout_margin="8dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/testButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/test"
            android:layout_margin="8dp"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/deleteThemeButton"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/delete_theme"
        android:layout_gravity="center"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/backButton"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/back"
        android:layout_gravity="center"
        android:layout_margin="8dp"/>
</LinearLayout>