<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/editTestContainer">
    <TextView
        android:id="@+id/fullNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_margin="8dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/testsRecycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addQuestionButton"
        android:layout_gravity="center"
        android:text="@string/add_question"/>

    <ru.malevichrp.superlearn.fragments.quiz.views.visibilitybutton.VisibilityButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/startTestButton"
        android:layout_gravity="center"
        android:text="@string/start_test"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/backButton"
        android:layout_gravity="center"
        android:text="@string/back"
        android:layout_margin="8dp"/>
</LinearLayout>